# dpdata-turbomole-plugin

./: README.md  pyproject.toml
dpdata_turbomole.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
